lector de pdf embebido. Resuelto problemas de renderizado y filtrado.